--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>React App</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Titillium+Web">
+    <title>Capitals Flashcards</title>
   </head>
   <body>
     <div id="root"></div>
